force-app/main/default/objects/Vacancy__c/fields/Amount_of_candidates__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_candidates__c</fullName>
    <label>Amount of candidates</label>
    <summaryForeignKey>VacancyCandidateAssociation__c.Vacancy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>