force-app/main/default/objects/Vacancy__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Candidate proposed for this vacancy by recruiter (Only candidates with &quot;Validated by HR&quot; status)</description>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>