force-app/main/default/objects/Vacancy__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Vacancy brief description</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>