force-app/main/default/objects/Vacancy__c/fields/PromoDescription__c.field-meta.xml
<CustomField>
    <fullName>PromoDescription__c</fullName>
    <label>PromoDescription</label>
    <type>TextArea</type>
</CustomField>