force-app/main/default/objects/Vacancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Responsible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>