force-app/main/default/objects/Vacancy__c/listViews/Canceled.listView-meta.xml
<ListView>
    <fullName>Canceled</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Canceled</label>
</ListView>