force-app/main/default/objects/Vacancy__c/listViews/For_Approval.listView-meta.xml
<ListView>
    <fullName>For_Approval</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Responsible__c</columns>
    <columns>Amount_of_candidates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In-Process</value>
    </filters>
    <filters>
        <field>Amount_of_candidates__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>For Approval</label>
    <sharedTo>
        <role>Manager</role>
    </sharedTo>
</ListView>