force-app/main/default/objects/Vacancy__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Responsible__c</columns>
    <columns>Amount_of_candidates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In-Process</value>
    </filters>
    <label>In-Progress</label>
</ListView>