force-app/main/default/objects/Vacancy__c/listViews/New_Vacancies.listView-meta.xml
<ListView>
    <fullName>New_Vacancies</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Vacancies</label>
    <sharedTo>
        <roleAndSubordinates>Recruiter_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>